css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Orbitron:wght@400..900&display=swap');

:root {
    --dark-green: #4a7337;
    --light-green: #80af6a;
    --beige: #ddd48f;
    --light-brown: #cda989;
    --dark-brown: #462e1b;
}

*{
    box-sizing: border-box;
    font-family: 'Orbitron';
    font-weight: 400;
    letter-spacing: 1.1px;
}

body{
    display: block;
    justify-content: center;
    text-align: center;
    background-color: var(--dark-brown);
    color: var(--beige);
    animation: fadeIn 1s;
}

main {
    margin: 0 auto;
    width: 90vw;
    max-width: 95vw;
    justify-content: center;
}

header h1 { 
    font-weight: 700;
    font-size: 48px;
}

main h2 { 
    font-weight: 600;
    font-size: 28px;
}

main h3 { 
    text-align: start;
    width: 100%;
    font-weight: 500;
    font-size: 24px;
}

footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

footer p {
    font-weight: 300;
    font-size: 16px;
    font-family: 'Chakra Petch';
    margin: 6px 0 ;
}

form{
    text-align: center;
    margin: 0 auto;
    width: 300px;
}

form label{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 6px;
}

form label input,textarea{
    width: 170px;
}

ul{
    padding: 0;
    display: flex;
    justify-content: center;
}

ul li{ /*nav bar*/
    list-style: none;
    margin: 0px 15px;
}

ol{
    padding: 0;
    text-align: center;
    margin: 0 auto;
    width: auto;
}

a{
    text-decoration: none;
    color: var(--light-green);
    font-family: 'Chakra Petch';
    letter-spacing: 1.1px;
    font-size: 20px;
}

.game-list{
    display: grid;
    justify-content: space-around;
    grid-template-columns: repeat(auto-fit, 300px);
    gap: 100px 30px;
}

.game-list li {
    list-style: none;
}

.game-list a {
    display: block;
    text-align: center;
    width: 100%;
    height: 190px;
}

.game-list img {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.game-list p {
    display: block;
    text-overflow: ellipsis ;
    white-space: nowrap;
    overflow: hidden;
    margin: 0;
    font-family: 'Chakra Petch';
    letter-spacing: 1.1px;
    font-size: 19px;
    max-width: 100%;
}

/* ANIMACIONES */

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

/* ----------- */

/* MEDIA QUERIES */

/* MOBILE */
@media screen and (max-width: 699px) {
    .game-list {
        grid-template-columns: repeat(auto-fit, 100%);
    }

    .game-list li {
        margin: 0 30px;
    }

    .game-list a {
        height: 50vw;
    }

    .game-list p {
        font-size: 26px;
    }
}

/* TABLET */
@media screen and (min-width: 700px) and (max-width: 1066px) {
    .game-list {
        grid-template-columns: repeat(auto-fit, 45%);
    }

    .game-list a {
        height: 25vw;
    }

    .game-list p {
        font-size: 22px;
    }
}

/* DESKTOP SMALL */
@media screen and (min-width: 1067px) and (max-width: 1433px) {
    .game-list {
        grid-template-columns: repeat(auto-fit, 30%);
    }

    .game-list a {
        height: 16vw;
    }
}

/* DESKTOP MEDIUM */
@media screen and (min-width: 1434px) and (max-width: 1799px) {
    .game-list {
        grid-template-columns: repeat(auto-fit, 22%);
    }

    .game-list a {
        height: 12vw;
    }
}

/* ------------- */

/* Imagenes de miniatura estan mal, se estan usando imagenes pesadas modificandole el tamaño, Thumb

Seguir viendo temas de diseño

*/

